package jayslabs.section8.dto;

public record CustomerDTO(
    Integer id, 
    String name, 
    String email) {

}
